# scac

./: .env.sample  API.md  Conflict.md  DATABASE.md  Dockerfile  FEATURE_DEVELOPMENT_PROCESS.md  PLANNING.md  PROJECT_STRUCTURE.md  README.md  ROUTE.md  SCHEMA.md  SERVICES.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  tables.sql
.github/workflows/: about-service.yml  action_reaction_service.yml  actions-service.yml  api-services-service.yml  api_gateway.yml  argo-cd.yml  authentications-service.yml  authentification-service.yml  authentifications-service.yml  client.yml  deploy-helm-template.yml  docker-image-template.yml  docker.yml  kube-prometheus-stack.yml  migration.yml  reactions-service.yml  scac-deployment.yml  scac.yml  service_integration_service.yml  trigger_service.yml  user-tokens-service.yml  user_management_service.yml  users-service.yml  workflow_service.yml  workflows_service.yml
admin_panel/: package-lock.json  package.json
admin_panel/src/: App.js
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: main.rs
client/: .dockerignore  Dockerfile  nginx.conf  pubspec.yaml  splash.yaml
client/lib/: main.dart
deployment/argo-cd/: .gitignore
deployment/kube-prometheus-stack/: .gitignore
deployments/: Chart.yaml  values.yaml
deployments/argo-cd/: .gitignore
deployments/kube-prometheus-stack/: Chart.yaml
deployments/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
services/about-service/: Cargo.toml  Dockerfile
services/action-reaction-service/: Cargo.toml  Dockerfile
services/actions-service/: Cargo.toml  Dockerfile
services/actions-service/src/: handler.rs  main.rs  query.rs
services/api-services-service/: Cargo.toml  Dockerfile
services/apis-service/: Cargo.toml  Dockerfile
services/authentications-service/: Cargo.toml  Dockerfile
services/authentification-service/: Cargo.toml  Dockerfile
services/authentifications-service/: Cargo.toml  Dockerfile
services/authentifications-service/src/: handler.rs  main.rs  query.rs
services/reactions-service/: Cargo.toml  Dockerfile
services/service-integration-service/: Cargo.toml  (+1 more)
services/user-tokens-service/: Cargo.toml  Dockerfile
services/user-tokens-service/src/: handler.rs  main.rs  query.rs
services/users-service/: .gitignore  Cargo.toml  Dockerfile
services/users-service/src/: handler.rs  main.rs  query.rs
shared/database/: Cargo.toml  Dockerfile  diesel.toml
shared/database/migrations/2024-11-27-132124_create_users/: up.sql
shared/database/migrations/2024-12-02-110236_auth_service/: down.sql  up.sql
shared/database/migrations/2024-12-03-054126_user_tokens/: up.sql
shared/database/migrations/2024-12-03-172005_api_services/: up.sql
shared/database/migrations/2024-12-03-180556_api_services_actions/: down.sql  up.sql
shared/database/migrations/2024-12-03-182844_api_services_reactions/: down.sql  up.sql
shared/database/migrations/2024-12-03-183914_workflows/: down.sql  up.sql
shared/database/migrations/2024-12-16-170535_create_user/: up.sql
shared/database/migrations/2024-12-16-172517_add_auth/: up.sql
shared/database/migrations/2024-12-16-172718_add_api_service/: up.sql
shared/database/migrations/2024-12-16-173012_add_action/: up.sql
shared/database/migrations/2024-12-16-173222_add_reaction/: up.sql
shared/database/migrations/2024-12-16-173407_add_workflow/: up.sql
shared/database/migrations/2024-12-16-184017_create_users_table/: up.sql
shared/database/migrations/2024-12-16-184031_create_authentications_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184042_create_user_tokens_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184050_create_apis_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184058_create_actions_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184105_create_reactions_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184112_create_workflows_table/: down.sql  up.sql
shared/database/migrations/2024-12-16-184120_create_triggers_table/: down.sql  up.sql
shared/database/migrations/2024-12-17-004802_seed_authentications_table/: down.sql  up.sql
shared/database/migrations/2024-12-17-004938_seed_apis_table/: down.sql  up.sql
shared/database/migrations/2024-12-17-005252_seed_actions_table/: down.sql  up.sql
shared/database/migrations/2024-12-17-005546_seed_reactions_table/: down.sql  up.sql
shared/database/migrations/2025-01-11-100003_seed_users_table/: down.sql  up.sql
shared/database/migrations/2025-01-11-125956_seed_workflows_table/: down.sql  up.sql
shared/database/migrations/2025-01-11-130608_seed_user_tokens_table/: down.sql  up.sql
shared/database/migrations/a/: up.sql
shared/database/migrations/b/: down.sql  up.sql
shared/database/migrations/c/: down.sql  up.sql
shared/database/migrations/d/: down.sql  up.sql
shared/database/migrations/f/: down.sql  up.sql
shared/database/migrations/g/: up.sql
shared/database/migrations/h/: down.sql  up.sql
shared/database/src/: api_service_model.rs  api_services_actions_model.rs  api_services_reactions_model.rs  auth_service_models.rs  lib.rs  model.rs  schema.rs  user_tokens_model.rs  workflows_model.rs
(+99 files in other folders)
