[package]
name = "actions-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actions-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "serde_json"] }
database = { path = "../../shared/database" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
