[package]
name = "user-tokens-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-tokens-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
database = { path = "../../shared/database" }
chrono = { version = "0.4", features = ["serde"] }
