[package]
name = "users-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "users-service"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
utoipa = "5"
utoipa-actix-web = "0.1"
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
uuid = { version = "1.11.0", features = ["v4"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
database = { path = "../../shared/database" }
bcrypt = "0.16.0"
jwt = "0.16.0"
regex = "1.11.1"

