[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"